# thatrack-bot

./: pyproject.toml
src/: config.py
src/bot/: main.py
src/bot/middleware/: auth.py
src/bot/routers/: __init__.py  std.py
src/cache/: redis_manager.py
